# wec

./: Cargo.toml  README.md
src/: lib.rs
tests/: fail_test.rs  test.rs
tests/fail_cases/: empty_bec.rs  empty_bec.stderr  empty_vinto.rs  empty_vinto.stderr  just_comma_bec.rs  just_comma_bec.stderr  just_comma_vinto.rs  just_comma_vinto.stderr
